# NEOGRID

./: .replit
attached_assets/: Pasted-Create-a-NEW-standalone-module-testnet-simulator-This-i_1777773283897.txt  Pasted-Create-a-production-grade-distributed-networking-layer-_1777768821201.txt  Pasted-Create-a-production-grade-project-called-neogrid-ndap-w_1777766482971.txt  Pasted-NDAP-Neogrid-Distributed-Asset-Protocol-Production-Core_1777770302244.txt  Pasted-TASK-FINALIZE-NEOGRID-NDAP-INTO-PUBLIC-REFERENCE-PROTOC_1777780924577.txt  Pasted-TASK-TRANSFORM-NDAP-INTO-FORMAL-SPECIFICATION-EXECUTION_1777780000612.txt  Pasted-You-are-now-upgrading-the-existing-neogrid-ndap-project_1777766994316.txt  Pasted-You-are-working-inside-an-existing-repository-called-NE_1777771977132.txt  Pasted-You-are-working-inside-neogrid-ndap-testnet-simulator-T_1777773757944.txt  Pasted-You-are-working-inside-neogrid-ndap-testnet-simulator-T_1777774113866.txt  Pasted-You-are-working-inside-the-NDAP-repository-DO-NOT-modif_1777774728646.txt  Pasted-You-are-working-inside-the-NDAP-repository-DO-NOT-modif_1777775029295.txt  Pasted-You-are-working-inside-the-NDAP-repository-DO-NOT-modif_1777775284819.txt  Pasted-You-are-working-inside-the-NDAP-repository-DO-NOT-modif_1777775322319.txt  Pasted-You-are-working-inside-the-NDAP-repository-DO-NOT-modif_1777776026065.txt  Pasted-You-are-working-inside-the-NDAP-repository-DO-NOT-modif_1777776301438.txt  (+2 more)
neogrid-ndap/core-rust/: Cargo.toml
neogrid-ndap/core-rust/src/: engine.rs  hash.rs  lib.rs  main.rs  mmr.rs  smt.rs  state.rs  tx.rs  verifier.rs
(+143 files in other folders)
