[package]
name = "ndap-core"
version = "2.0.0"
edition = "2018"

[lib]
name = "ndap_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ndap-engine"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
hex = "0.4"
